--- a/src/components/modals.html
+++ b/src/components/modals.html
@@ -26,6 +26,39 @@
     </div>
 </div>
 
+<!-- номера телефонов --->
+<div id="contactsModal" aria-hidden="true" class="modal modal_mb contacts-modal">
+    <div class="modal__wrapper">
+        <div class="modal__content">
+            <div class="modal__body">
+                <div class="contacts-modal__inner">
+                    <ul class="contacts-modal__list">
+                        <li class="contacts-modal__list-item">
+                            <span class="contacts-modal__subtitle text text__regular-15"
+                                >Оптовый отдел продаж:</span
+                            >
+                            <a class="contacts-modal__link text text__regular-18">8 800 600 28 20</a>
+                            <p class="contacts-modal__text text text__regular-15">
+                                Пн - Пт: с 9:00 до 18:00  Сб, Вс: : выходные
+                            </p>
+                        </li>
+                        <li class="contacts-modal__list-item">
+                            <span class="contacts-modal__subtitle text text__regular-15"
+                                >Оптово-розничный магазин:</span
+                            >
+                            <a class="contacts-modal__link text text__regular-18">8 800 600 28 20</a>
+                            <p class="contacts-modal__text text text__regular-15">
+                                Пн - Вс: с 8:00 до 18:30 Без выходных
+                            </p>
+                        </li>
+                    </ul>
+                    <button type="button" class="contacts-modal__btn btn">Заказать звонок</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- заказ оформлен (пользователь не зарегестрирован) -->
 <div id="checkoutCompleteV2" aria-hidden="true" class="modal checkout-complete-modal">
     <div class="modal__wrapper">
