--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -6,6 +6,11 @@
         flex-direction: column;
         gap: 6rem;
         padding: 12rem 0 6rem;
+
+        @media (max-width: 48em) {
+            padding: 20rem 0 18rem 0;
+            gap: normal;
+        }
     }
     // .footer__main
     &__main {
@@ -13,18 +18,83 @@
         justify-content: space-between;
         gap: 16rem;
         min-height: 30.2rem;
+
+        @media (max-width: 48em) {
+            margin-bottom: 8rem;
+            flex-direction: column;
+            justify-content: stretch;
+            min-height: auto;
+            gap: normal;
+        }
     }
     // .footer__block
     &__block {
         display: flex;
         flex-direction: column;
-        gap: 2.4rem;
-        max-width: 30rem;
-        &--logo {
-            width: 29.6rem;
+        gap: 4.8rem;
+
+        &:last-child {
+            margin-top: 6.4rem;
         }
-        &--info {
-            width: 23.4rem;
+
+        &__info {
+            margin-bottom: 6.4rem;
+        }
+        &--logo {
+            width: 33.2rem;
+        }
+
+        @media (min-width: 48em) {
+            max-width: 30rem;
+            gap: 2.4rem;
+            &--logo {
+                width: 29.6rem;
+            }
+            &--info {
+                margin-bottom: 0;
+                width: 23.4rem;
+            }
+            &:last-child {
+                margin-top: 0;
+            }
+        }
+
+        &:not(&.footer__block--info) {
+            @media (min-width: 48em) {
+                .text__regular-18 {
+                    pointer-events: none;
+                }
+            }
+            @media (max-width: 48em) {
+                display: block;
+                .footer__nav-list li {
+                    font-size: 3rem;
+                }
+                .text__regular-18 {
+                    padding-bottom: 1.6rem;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    border-bottom: 1px solid $grey-text;
+
+                    &._is-active {
+                        &::after {
+                            transform: rotate(-180deg);
+                        }
+                    }
+
+                    &::after {
+                        content: '';
+                        flex: 0 0 6rem;
+                        width: 6rem;
+                        height: 6rem;
+                        background-image: url('./assets/images/icons/sm-arr.svg');
+                        background-size: contain;
+                        background-repeat: no-repeat;
+                        transition: transform 0.3s ease;
+                    }
+                }
+            }
         }
 
         h6 {
@@ -35,17 +105,42 @@
             display: flex;
             align-items: flex-start;
             gap: 1.2rem;
+
+            @media (max-width: 48em) {
+                gap: 1.6rem;
+            }
         }
         // .footer__block-icon
         &-icon {
             width: 2.8rem;
             height: 2.8rem;
+
+            @media (max-width: 48em) {
+                width: 4.8rem;
+                height: 4.8rem;
+            }
         }
         // .footer__block-text
         &-text {
             display: flex;
             flex-direction: column;
             gap: 1.2rem;
+
+            span {
+                color: $grey-text;
+            }
+
+            @media (max-width: 48em) {
+                gap: 2.4rem;
+
+                strong {
+                    font-weight: 400;
+                }
+
+                span {
+                    font-size: 3rem;
+                }
+            }
         }
     }
     // .footer__logo
@@ -54,6 +149,10 @@
         margin-bottom: 1.6rem;
         a {
             display: block;
+        }
+
+        @media (max-width: 48em) {
+            margin-bottom: 4rem;
         }
     }
     // .footer__subscribe
@@ -70,6 +169,17 @@
             width: 3.2rem;
             height: 3.2rem;
         }
+
+        @media (max-width: 48em) {
+            margin-bottom: 8rem;
+            padding: 2.4rem 6.4rem 2.4rem 2rem;
+            font-size: 3.2rem;
+
+            img {
+                width: 4.8rem;
+                height: 4.8rem;
+            }
+        }
     }
     // .footer__pay
     &__pay {
@@ -77,32 +187,71 @@
         align-items: center;
         gap: 1.5rem;
         margin-top: auto;
+
+        @media (max-width: 48em) {
+            margin-top: 0;
+            gap: 2.4rem;
+            align-self: center;
+        }
     }
     // .footer__nav-list
     &__nav-list {
-        display: flex;
-        flex-direction: column;
-        gap: 1.2rem;
         li {
+            display: block;
             color: $grey-text;
             width: max-content;
+            &:not(:last-child) {
+                margin-bottom: 1.2rem;
+            }
+            @media (max-width: 48em) {
+                &:not(:last-child) {
+                    margin-bottom: 2.4rem;
+                }
+                &:first-child {
+                    margin-top: 4rem;
+                }
+            }
+        }
+        @media (max-width: 48em) {
+            line-height: 1;
         }
     }
     // .footer__bottom
     &__bottom {
+        margin-bottom: 3.2rem;
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: space-between;
-        padding-top: 2.4rem;
-
-        border-top: 0.15rem solid $grey-text;
+        gap: 3.2rem;
         color: $grey-text;
+
+        @media (min-width: 48em) {
+            margin-bottom: 0;
+            padding-top: 2.4rem;
+            display: grid;
+            grid-template-columns: 21rem 1fr 21rem;
+            gap: normal;
+            border-top: 0.15rem solid $grey-text;
+
+            li:nth-child(2) {
+                justify-self: center;
+            }
+            li:last-child {
+                justify-self: end;
+            }
+        }
     }
 }
 
 .social-list {
+    margin-bottom: 8rem;
     display: flex;
     align-items: center;
-    margin-top: 0.8rem;
-    gap: 0.8rem;
+    gap: 1.6rem;
+
+    @media (min-width: 48em) {
+        margin-top: 0.8rem;
+        margin-bottom: 0;
+        gap: 0.8rem;
+    }
 }
