feat: shippin and payment pages

--- a/src/components/_shipping.html
+++ b/src/components/_shipping.html
@@ -1,4 +1,4 @@
-<section class="payment">
+<section class="shipping">
     <div class="container">
         <nav class="breadcrumbs">
             <a href="#" class="breadcrumbs__txt">Главная</a>
@@ -9,7 +9,7 @@
                 <nav class="tabs__navigation">
                     <h1 class="payment__title h h_h1">Доставка и оплата</h1>
 
-                    <a href="../catalog.html" type="button" class="tabs__title">
+                    <a href="../catalog.html" type="button" class="tabs__title _is-active">
                         <span class="nav-link-sidebar-account__icon-wrap">
                             <svg
                                 width="24"
@@ -48,7 +48,7 @@
                         </span>
                         <span class="nav-link-sidebar-account__text text text__regular-20">Доставка</span>
                     </a>
-                    <a href="#" type="button" class="tabs__title _is-active">
+                    <a href="#" type="button" class="tabs__title">
                         <span class="nav-link-sidebar-account__icon-wrap">
                             <svg
                                 width="24"
@@ -67,36 +67,37 @@
                     </a>
                 </nav>
                 <div class="tabs__content">
-                    <strong class="payment__tabs-title h h_h3">
-                        Безналичная оплата при оптовом заказе
-                    </strong>
+                    <strong class="payment__tabs-title h h_h3"> Доставка до ТК и по Москве </strong>
 
                     <span class="payment__tabs-subtitle">
-                        Для Вашего удобства доступно три безналичных способа оплаты:
+                        Вы можете оформить заказ на сайте или связаться с одним из наших менеджеров
                     </span>
 
                     <ol>
-                        <li>Выставленный счет на оплату.</li>
-                        <li>Банковской картой по QR-коду.</li>
-                        <li>Банковской картой через терминал.</li>
+                        <li>Доставляем заказы до ТК и по Москве (в пределах МКАД)</li>
+                        <li>Доставка на заказ до 100 000 рублей оплачивается отдельно</li>
+                        <li>Доставка на заказ от 100 000 рублей по Москве (в пределах МКАД) — бесплатно</li>
+                        <li>Услуги выбранной ТК оформляются клиентом и оплачиваются отдельно</li>
+                        <li>
+                            При выборе в качестве перевозчика компании ПЭК Вы получаете от них СКИДКУ — 7%
+                        </li>
+                        <li>Доставка на заказ от 100 000 рублей по Москве (в пределах МКАД) — бесплатно</li>
+                        <li>Всегда доступен самовывоз с нашего склада или оптово-розничного магазина</li>
                     </ol>
 
                     <p>
-                        Оптовые заказы можно оплатить по выставленному счету или банковской картой по QR-коду.
-                        Для получения обратитесь к менеджеру нашей компании или оформите заказ на сайте. Также
-                        доступна оплата банковской картой при помощи эквайринга при самовывозе с нашего склада
-                        по адресу: Одинцово, улица Южная, дом 8, склад 5-6.
+                        Если Вы забираете заказ самовывозом с нашего склада, отправив своего водителя или
+                        водителя курьерской службы, при себе он должен иметь подписанную Вами доверенность.
+                        При получении товара печать или доверенность от Вашей организации обязательна.
                     </p>
 
-                    <strong class="payment__tabs-title h h_h3">
-                        Оплата наличными или картой в оптово-розничном магазине
-                    </strong>
-
-                    <p>
-                        Вы можете оплатить заказ наличными или банковской картой в нашем мелкооптовом магазине
-                        на Фуд Сити при самовывозе по адресу: Москва, поселение Сосенское, Калужское шоссе,
-                        22-й километр, строение 10.
-                    </p>
+                    <div class="payment__tabs-banner">
+                        <div class="payment__tabs-banner-content">
+                            <figure class="payment__tabs-banner-image">
+                                <img src="./assets/images/sections/payment/banner-image.png" alt="">
+                            </figure>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
